--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,72 @@
-mlx==0.0.10
-mlx-lm==0.0.3
-pydantic
-unstructured[pdf]
+accelerate==1.11.0
+aiofiles==25.1.0
+annotated-types==0.7.0
+backoff==2.2.1
+beautifulsoup4==4.14.2
+cffi==2.0.0
+click==8.3.0
+coloredlogs==15.0.1
+contourpy==1.3.3
+cryptography==46.0.3
+cycler==0.12.1
+dataclasses-json==0.6.7
+emoji==2.15.0
+filetype==1.2.0
+flatbuffers==25.9.23
+fonttools==4.60.1
+html5lib==1.1
+humanfriendly==10.0
+joblib==1.5.2
+kiwisolver==1.4.9
+langdetect==1.0.9
+lxml==6.0.2
+marshmallow==3.26.1
+matplotlib==3.10.7
+ml_dtypes==0.5.3
+mpmath==1.3.0
+mypy_extensions==1.1.0
+networkx==3.5
+nltk==3.9.2
+numpy==2.2.6
+olefile==0.47
+onnx==1.19.1
+onnxruntime==1.23.2
+opencv-python==4.12.0.88
+pdf2image==1.17.0
+pdfminer==20191125
+pdfminer.six==20250506
+pi_heif==1.1.1
+pillow==12.0.0
+psutil==7.1.1
+pyarrow==21.0.0
+pycryptodome==3.23.0
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyparsing==3.2.5
+pypdf==6.1.3
+pypdfium2==4.30.0
+pytesseract==0.3.13
+python-iso639==2025.2.18
+python-magic==0.4.27
+python-multipart==0.0.20
+python-oxmsg==0.0.2
+RapidFuzz==3.14.1
+requests-toolbelt==1.0.0
+scipy==1.16.2
+setuptools==80.9.0
+soupsieve==2.8
+sympy==1.14.0
+tesseract==0.1.3
+timm==1.0.20
+torch==2.9.0
+torchvision==0.24.0
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+unstructured==0.18.15
+unstructured-client==0.42.3
+unstructured-inference==1.0.5
+unstructured.pytesseract==0.3.15
+webencodings==0.5.1
+wheel==0.45.1
+wrapt==2.0.0
+zstandard==0.25.0
